@@ -11,6 +11,9 @@ Stephen Blackheath and Chris Sullins for contributing to this release.
 
 {{{ Bug fixes
 
+- Fixed freezes on hypersearch with encoding errors.
+  (#3502585 Jarek Czekalski)
+
 - Fixed IO error when changing VFS Browser filter content
   (#3502820 Matthieu Casanova)
 
